--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,4 +6,74 @@ html {
 }
 body {
   font-size: 1.6rem;
+  font-family: Poppins, sans-serif;
+  background-color: #fffcf4;
+}
+/* <======================common========================> */
+a {
+  text-decoration: none;
+  color: black;
+}
+.btn {
+  display: inline-block;
+  min-width: 118px;
+  color: white;
+  border-radius: 30px;
+  line-height: 2.8rem;
+  background-color: black;
+  text-align: center;
+  padding: 8px 8px;
+  font-weight: 600;
+}
+/* <======================Header========================> */
+
+.header .body {
+  display: flex;
+  align-items: center;
+  padding: 30px 0 8px;
+}
+.nav ul {
+  display: flex;
+}
+.nav {
+  margin-left: auto;
+}
+.header .main-content {
+  max-width: calc(100% - 100px);
+  margin: 0 auto;
+  margin-top: 26px;
+}
+.ds_nav a {
+  display: inline-block;
+  margin: 0 11px;
+  padding: 10px;
+  position: relative;
+}
+
+/* .header .action {
+  margin-left: 20px;
+} */
+.nav .active a,
+.nav a:hover {
+  text-shadow: 1px 0px 0px #000;
+}
+.nav .active a::after {
+  display: block;
+  height: 2.5px;
+  width: 11px;
+  background-color: #000;
+  content: "";
+  position: absolute;
+  bottom: 6px;
+  left: 10px;
+}
+.btn_sign_up {
+  margin-left: 20px;
+}
+
+.fixed {
+  position: sticky;
+  top: -20px;
+  margin-bottom: 8px;
+  background-color: #fffcf4;
 }
