--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,6 +44,9 @@ a {
   padding: 8px;
   font-weight: 600;
 }
+.btn:hover {
+  opacity: 0.8;
+}
 .title-lv2 {
   color: #171100;
   font-family: var(--font-sen);
@@ -51,6 +54,16 @@ a {
   font-weight: 700;
   line-height: 1.26; /* 126.316% */
   letter-spacing: -0.76px;
+}
+.line-clamp {
+  display: -webkit-box;
+  -webkit-line-clamp: var(--line-clamp, 1);
+  line-clamp: var(--line-clamp, 1);
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+.line-clamp.clamp-2 {
+  --line-clamp: 2;
 }
 /* <======================Header========================> */
 .header {
@@ -220,6 +233,9 @@ main .hero-left .desc-item .title {
   display: flex;
   align-items: center;
 }
+.hero-right button .watch-vd:hover {
+  cursor: pointer;
+}
 .hero-right button .watch-vd .icon-play {
   display: flex;
   align-items: center;
@@ -255,6 +271,7 @@ main .hero-left .desc-item .title {
 /* <======================popular-top-right========================> */
 .popular {
   padding-top: 65px;
+  padding-bottom: 65px;
   margin-top: 135px;
 }
 .popular .popular-top {
@@ -297,11 +314,18 @@ main .control .btn-control:hover {
   gap: 30px;
 }
 .courses-item {
-  border-radius: 12px;
-  background: #fff;
-  width: 370px;
-  height: 466px;
+  overflow: hidden;
 
+  width: 33.33%;
+
+  border-radius: 12px;
+  border: 1px solid #e2dfda;
+  background: #fff;
+  flex: 1;
+}
+.courses-item:hover {
+  border: transparent;
+  background: #fff;
   box-shadow: 0px 18px 36px 0px rgba(0, 0, 0, 0.05);
 }
 .courses-item .thumb {
@@ -311,6 +335,7 @@ main .control .btn-control:hover {
   object-fit: cover;
 }
 .content-courses {
+  padding-bottom: 22px;
   padding-top: 16px;
   width: 100%;
   padding: 16px 22px 32px;
@@ -319,7 +344,7 @@ main .control .btn-control:hover {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 326px;
+  width: 100%;
   /* padding-left: 22px; */
   align-items: center;
 }
@@ -337,7 +362,7 @@ main .control .btn-control:hover {
 p.desc-courses {
   line-height: 26px;
   font-size: 14px;
-  width: 326px;
+  width: 100%;
   padding-top: 6px;
   /* padding-left: 22px; */
 }
@@ -364,5 +389,252 @@ p.desc-courses {
   font-size: 14px;
   line-height: 1.85714; /* 185.714% */
   border-radius: 25px;
+}
+.foot-item .btn-book-now:hover {
   background: #ffb900;
+}
+/* <======================feedback========================> */
+.feedback {
+  margin-top: 135px;
+  background: #2e2100;
+}
+.feedback .member img {
+  width: 72px;
+  height: 72px;
+  border-radius: 72px;
+  object-fit: cover;
+}
+.feedback .feedback-body {
+  padding-top: 96px;
+  padding-bottom: 96px;
+  display: flex;
+  overflow: auto;
+}
+.feedback .member-slot {
+  display: flex;
+  flex-shrink: 0;
+  justify-content: space-between;
+  width: 100%;
+}
+.feedback .member p.name-member {
+  color: #f7f7f7;
+  font-family: var(--font-sen);
+  font-size: 2.4rem;
+  font-weight: 700;
+  line-height: 1.41667; /* 141.667% */
+  padding-top: 18px;
+}
+.feedback .member p.info-member {
+  color: #bfbcb2;
+  font-size: 1.4rem;
+  line-height: 1.85714; /* 185.714% */
+  padding-top: 4px;
+}
+.feedback .dots {
+  width: 30px;
+  height: 6px;
+  display: flex;
+  padding-top: 28px;
+  gap: 6px;
+}
+.dots .dot {
+  width: 6px;
+  height: 6px;
+  border-radius: 6px;
+  background: #634700;
+  cursor: pointer;
+}
+.dots .dot.active {
+  background: #ffb900;
+  cursor: auto;
+}
+/* <======================feedback-right========================> */
+.content {
+  width: 65.8%;
+}
+.content.img-quote {
+  width: 30px;
+  height: 28px;
+  fill: #634700;
+}
+.content blockquote {
+  color: #fff;
+  font-size: 2.6rem;
+  font-style: italic;
+  line-height: 1.53846; /* 153.846% */
+}
+/* <======================feature-left========================> */
+.features {
+  margin-top: 135px;
+}
+.features .features-body {
+  padding-top: 65px;
+  padding-bottom: 65px;
+  display: flex;
+  justify-content: space-between;
+}
+.features .features-left {
+  display: flex;
+  width: 49%;
+}
+
+.features-left .img-left {
+  padding-top: 34px;
+  width: 270px;
+  height: 404px;
+}
+
+.features-left .img-right {
+  padding-bottom: 34px;
+  padding-left: 30px;
+  height: 404px;
+}
+/* <======================feature-right========================> */
+.features .features-right {
+  width: 41%;
+  align-self: center;
+}
+
+.features-right .title-lv2 {
+  width: 100%;
+  /* margin-top: 58px; */
+}
+.features-right .desc-p {
+  width: 100%;
+  font-size: 1.6rem;
+  line-height: 1.75; /* 175% */
+  padding-top: 16px;
+}
+
+.features-right .action {
+  padding-top: 32px;
+}
+.features .btn {
+  background-color: var(--primary-color);
+}
+/* <======================feature-2========================> */
+.features2 .features-left {
+  display: block;
+  align-self: center;
+}
+.features2 p.desc-p {
+  width: 100%;
+  padding-top: 16px;
+}
+.features2 .action {
+  padding-top: 32px;
+}
+.features2 .img-features2 {
+  width: 470px;
+  height: 440px;
+  object-fit: cover;
+  border-radius: 20px;
+}
+/* <======================blog========================> */
+.blog {
+  margin-top: 135px;
+  background-color: #fffcf4;
+}
+.blog .blog-top {
+  padding-top: 96px;
+  text-align: center;
+  /* display: flex;
+  flex-direction: column;
+  align-items: center; */
+}
+.blog-top .desc-p {
+  /* text-align: center;
+  font-size: 16px;
+  line-height: 1.75; 
+  padding-top: 16px; */
+  /* width: 448px; */
+  margin: 16px auto 0;
+  width: 448px;
+  color: #696262;
+  font-size: 1.6rem;
+  line-height: 1.75;
+}
+/* <======================blog-bottom========================> */
+.blog-bottom {
+  padding-top: 55px;
+  padding-bottom: 96px;
+  overflow: hidden;
+}
+.blog-bottom .blog-list {
+  display: flex;
+  gap: 30px;
+}
+.blog-list .blog-item {
+  /* width: 33.33%; */
+  border-radius: 16px;
+  background: #fff;
+  border: 1px solid #e2dfda;
+  flex: 1 0 calc(33.33% - 20px);
+}
+.blog-list .blog-item:hover {
+  box-shadow: 0 16px 32px 0 rgba(0, 0, 0, 0.05);
+  border: transparent;
+}
+.blog-item img {
+  width: 100%;
+  height: 250px;
+  border-radius: 16px 16px 0 0;
+  object-fit: cover;
+}
+.blog-item .info-blog-item {
+  padding: 0 20px;
+  overflow: hidden;
+}
+.info-blog-item .time {
+  padding-top: 20px;
+  font-size: 1.4rem;
+  line-height: 1.85714; /* 185.714% */
+  display: inline-flex;
+  align-items: center;
+  position: relative;
+  padding-bottom: 12px;
+}
+.info-blog-item .time::before {
+  display: inline-block;
+  width: 6px;
+  height: 6px;
+  background-color: var(--primary-color);
+  content: "";
+  border-radius: 50%;
+  margin-right: 4px;
+}
+.info-blog-item .time::after {
+  content: "";
+  display: inline-block;
+  height: 1px;
+  border-radius: 0.5px;
+  background: #e2dfda;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  right: -27px;
+}
+.info-blog-item .name-blog {
+  color: #171100;
+  font-size: 1.6rem;
+  font-weight: 600;
+  line-height: 1.75; /* 175% */
+  padding-top: 12px;
+}
+.info-blog-item .action {
+  padding-top: 12px;
+  padding-bottom: 28px;
+}
+.info-blog-item .action a:hover {
+  background-color: var(--primary-color);
+}
+.info-blog-item .action a {
+  font-size: 1.4rem;
+  line-height: 1.85714; /* 185.714% */
+}
+.blog-bottom .dots {
+  display: flex;
+  gap: 6px;
+  margin-top: 38px;
+  justify-content: center;
 }
